Fix session not loaded when middleware booted Fix panel z-index

--- a/src/assets/webpack.css
+++ b/src/assets/webpack.css
@@ -6,7 +6,7 @@
   background-color: #ffffff;
   padding: 4px;
   vertical-align: top;
-  z-index: 100;
+  z-index: 10000;
   }
   #webpack-switcher span {
     display: inline-block;
